deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: myaistudio-tls
  name: my-ai-studio
  namespace: redhat-ods-applications
spec:
  selector:
    app: my-ai-studio
  ports:
    - name: proxy
      port: 8888
      protocol: TCP
      targetPort: oauth-proxy
    - name: app
      port: 8080
      protocol: TCP
      targetPort: 8080
